--- a/putninalozi/templates/company.html
+++ b/putninalozi/templates/company.html
@@ -13,7 +13,7 @@
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">{{ legend }}</legend>
-      <div class="row">
+      <div class="row just-column">
         <div class="col form-group">
             {{ form.companyname.label(class="form-control-label") }} 
             {% if form.companyname.errors %} 
@@ -64,7 +64,7 @@
           {% endif %}
         </div>
       </div>
-      <div class="row">
+      <div class="row just-column">
         <div class="col form-group">
             {{ form.company_zip_code.label(class="form-control-label") }} 
             {% if form.company_zip_code.errors %} 
@@ -105,7 +105,7 @@
             {% endif %}
         </div>
       </div>
-      <div class="row">
+      <div class="row just-column">
         <div class="col form-group">
             {{ form.company_site.label(class="form-control-label") }} 
             {% if form.company_site.errors %} 
