--- a/putninalozi/templates/company_list.html
+++ b/putninalozi/templates/company_list.html
@@ -4,7 +4,7 @@
 <a class="btn btn-info btn-sm m-1" href="{{ url_for('companys.register_c') }}">Kreiraj Novu Kompaniju</a>
 {% endif %}
 <hr />
-<table id="data" border="1" class="table table-striped">
+<table id="data" border="1" class="table table-striped complist">
   <thead>
     <tr>
       <th>Kompanija</th>
