--- a/putninalozi/templates/register_c.html
+++ b/putninalozi/templates/register_c.html
@@ -47,7 +47,7 @@
                   {% endif %}
               </div>
             </div>
-            <div class="row">
+            <div class="row just-column">
               <div class="col form-group">
                   {{ form.company_zip_code.label(class="form-control-label") }}
                   {% if form.company_zip_code.errors %}
@@ -88,7 +88,7 @@
                   {% endif %}
               </div>
             </div>
-            <div class="row">
+            <div class="row just-column">
               <div class="col form-group">
                   {{ form.company_site.label(class="form-control-label") }}
                   {% if form.company_site.errors %}
