--- a/putninalozi/static/mikicustom.css
+++ b/putninalozi/static/mikicustom.css
@@ -21,8 +21,8 @@ header { background-color: #104e97; padding-bottom: 40px; }
 .bg-implicit-deepblue { background-color: #104e97; }
 .bg-implicit-skyblue { background-color: #009dde; }
 .bg-implicit-purple { background-color: #940052; }
-a.btn.btn-outline-info { background-image: linear-gradient(#ff0000, #990000) !important; }
-a.btn.btn-outline-info:hover { color: #fff; background-image: linear-gradient(#555, #222) !important; border-color: transparent; }
+a.btn.btn-outline-info { background-image: linear-gradient(#bd0077, #7c004e) !important; }
+a.btn.btn-outline-info:hover { color: #fff; background-image: linear-gradient(#7c004e, #bd0077) !important; border-color: transparent; }
 
 body.login title /*body.Login header*/ { display: none; }
 body.login main.container { width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column; padding-top: 5%; }
@@ -30,8 +30,8 @@ body.login .col-md-12 { display: flex; flex-direction: column; }
 body.login main.container .rowinho { display: flex; max-width: 700px; width: 700px; background: rgba(255,255,255,0.7); border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.04); padding: 20px; }
 body.login fieldset.form-group { max-width: 100%; }
 body.login .rowinho form > div.form-group { margin-top: 30px; }
-body.login .container form > div.form-group { display: flex; justify-content: space-between; }
-.login-logo { margin: auto; max-width: 200px; width: 100%; }
+body.login .container form > div.form-group { display: flex; justify-content: space-between; align-items: baseline; /*filter: invert(1);*/ }
+.login-logo { margin: auto; max-width: 300px; width: 100%; }
 body.login main.container .content-section { background: transparent; padding: 0; border: none; border-radius: unset; margin-bottom: 0; max-width: 350px; margin: auto; }
 body.login main.container .subtitle { text-align: center; }
 body.login main.container i { color: #bbb; }
@@ -42,7 +42,7 @@ body.login .container label.form-control-label { color: #bbb; font-style: italic
 body.login main.container .content-section a { text-decoration: none; color: #104e97; font-weight: 500; }
 #email:before {content: '\f0e0' !important; position: absolute; font-family: "Font Awesome 6 Free"; }
 .btn { border: none; background-color: #009dde; background-image: linear-gradient(#009dde, #104e97); border-radius: 5px; color: #fff; text-transform: uppercase; font-weight: 500; font-size: 12px; padding: 10px 20px; }
-.btn:hover { color: #fff; /*background: #104e97 !important;*/background-image: linear-gradient(#555, #222); border-color: transparent; }
+.btn:hover { color: #fff; /*background: #104e97 !important;*/background-image: linear-gradient(#104e97, #009dde); border-color: transparent; }
 input:-webkit-autofill, input:-webkit-autofill:focus { transition: background-color 600000s 0s, color 600000s 0s; }
 
 body.home .btn.btn-info { min-width: 140px; }
@@ -68,12 +68,14 @@ body:not(.login) h1 { display: block; font-size: 24px; font-weight: 700; color: 
 .align-top { align-items: flex-start; }
 .m-1 { margin: 0 20px 0 0 !important; }
 #accordionZero { flex: 2; }
-.accordion-item { border-radius: 5px !important; border: 0; background: #f5f5f5; }
-.accordion-button { background-image: linear-gradient(#ccc, #999); color: #333 !important; text-transform: uppercase; font-weight: 700; font-size: 12px; padding: 10px 20px; border-radius: 5px !important; }
-.accordion-button:hover { color: #fff; background: #999 !important; border-color: transparent; }
+#accordionZero:not(.nothere) { margin-bottom: 50px; }
+.accordion-item { border-radius: 5px !important; border: 0; background: #f5f5f5; margin-bottom: 15px; }
+.accordion-button { background-image: linear-gradient(#009dde, #104e97); color: #333 !important; text-transform: uppercase; font-weight: 700; font-size: 12px; 
+	padding: 10px 20px; border-radius: 5px !important; color: #fff !important; }
+.accordion-button:hover { color: #fff; background-image: linear-gradient(#104e97, #009dde); !important; border-color: transparent; }
 .accordion-button:focus { border-color: transparent; outline: 0; box-shadow: none; }
 .accordion-button:not(.collapsed)::after { background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"); }
-.accordion-button::after { transform: rotate(0deg); }
+.accordion-button::after { transform: rotate(0deg); filter: invert(1); }
 .accordion-button:not(.collapsed)::after { transform: rotate(180deg); }
 .accordion-button.collapsed::after { transform: rotate(0deg); }
 .accordion-button h1 { margin: 0 !important; background-color: transparent !important; padding: 0 !important; color: #555 !important; }
@@ -87,6 +89,10 @@ body:not(.login) h1 { display: block; font-size: 24px; font-weight: 700; color: 
 .form-select:focus { border-color: #555; box-shadow: none; }
 input[type=search] { min-height: 38px; height: 38px; border-radius: 5px; }
 select.form-select.form-select-sm { min-height: 38px; }
+.minw120 { min-width: 120px; }
+.start-time label { min-width: 140px; }
+.top15, .inertop15 .form-box:not(:first-child) { padding-top: 15px; }
+.top50 { padding-top: 50px; }
 table#data { border: 0; width: 100% !important; margin-top: 20px; }
 .table>:not(caption)>*>* { padding: 6px; box-shadow: none; border: 0; border-right: 1px solid #fff; border-bottom: 1px solid #fff; }
 .table>thead { background-color: #ddd; font-size: 12px; }
@@ -94,6 +100,7 @@ table#data { border: 0; width: 100% !important; margin-top: 20px; }
 .table-striped tbody tr.odd { background-color: #eee; }
 .table-striped tbody tr.even { background-color: #f5f5f5; }
 .table td, .table th { vertical-align: middle; }
+.blue-purple-group a { border-radius: 5px !important; margin-right: 5px; }
 th.sorting.sorting_desc, th.sorting.sorting_asc { color: #009cdd; }
 .btn-info:not(:disabled):not(.disabled).active:focus, .btn-info:not(:disabled):not(.disabled):active:focus, .show>.btn-info.dropdown-toggle:focus { box-shadow: none; }
 .page-item:first-child .page-link { border-top-left-radius: 5px; border-bottom-left-radius: 5px; }
@@ -108,7 +115,7 @@ a.page-link:not(.page-item:first-child a.page-link, .page-item:last-child a.page
 .page-item:last-child:not(.disabled) .page-link { background-image: linear-gradient(#eee, #ccc); color: #555; }
 .page-item:first-child:not(.disabled) .page-link:hover { background-image: linear-gradient(#ccc, #ccc); }
 .page-item:last-child:not(.disabled) .page-link:hover { background-image: linear-gradient(#ccc, #ccc); }
-.content-section { padding-left: 10px; border: 0; }
+.content-section { border: 0; }
 .content-section h3 { font-size: 18px; color: #555; }
 .content-section .list-group-item { border: 0; padding: 10px 0;}
 .content-section ul.list-group li.list-group-item { border-bottom: 1px solid #ddd; margin-bottom: 1px; }
@@ -120,11 +127,12 @@ body.Registracija form > div.form-group { text-align: center; }
 .form-group label { margin-bottom: 0; }
 footer { display: flex; max-width: 1320px; margin: auto; justify-content: center; font-size: 12px; }
 form > div.form-group { text-align: center; }
+.button-group { margin: 30px 0 0 0; }
 .btn.btn-danger, .btn.btn-secondary { margin-bottom: 10px !important; }
 .btn.btn-secondary { background-image: linear-gradient(#eee, #ccc) !important; color:#555 !important; }
 .btn.btn-secondary:hover { background-image: linear-gradient(#ccc, #ccc) !important; }
-.btn.btn-danger { background-image: linear-gradient(#ff0000, #990000) !important; }
-.btn.btn-danger:hover { background-image: linear-gradient(#990000, #990000) !important; }
+.btn.btn-danger { background-image: linear-gradient(#bd0077, #7c004e) !important; }
+.btn.btn-danger:hover { background-image: linear-gradient(#7c004e, #bd0077) !important; }
 .btn.btn-secondary, .btn.btn-danger { margin: 0 0 10px 0 !important; }
 .form-check-input:checked { background-color: #009cdd; border-color: #009cdd; }
 @media (min-width: 992px) {
@@ -134,6 +142,9 @@ form > div.form-group { text-align: center; }
 	.accordion .card-body .row { flex-wrap: nowrap; }
 	.accordion-item input[type=submit] { width: auto; }
 	.accordion .card-body .row .form-group { width: auto; }
+	legend.border-bottom.mb-3 { margin: 50px 0 30px 0 !important; }
+	.form-switch { padding-left: 50px !important; }
+	.content-section { padding-left: 10px; }
 }
 @media (max-width: 991px) {
 	table.dataTable { max-width: 100% !important; width: 100% !important; }
@@ -145,24 +156,40 @@ form > div.form-group { text-align: center; }
 	table.dataTable > thead .sorting:before, table.dataTable > thead .sorting:after, table.dataTable > thead .sorting_asc:before, table.dataTable > thead .sorting_asc:after, table.dataTable > thead .sorting_desc:before, 
 	table.dataTable > thead .sorting_desc:after, table.dataTable > thead .sorting_asc_disabled:before, table.dataTable > thead .sorting_asc_disabled:after, table.dataTable > thead .sorting_desc_disabled:before, 
 	table.dataTable > thead .sorting_desc_disabled:after { position: unset; }
-	body:not(.Users) table#data.dataTable tbody td { padding-left: 70px; position: relative; }
+	body:not(.Users) table#data.dataTable tbody td { padding-left: 85px; position: relative; }
 	table#data.dataTable tbody td:before { font-size:12px; color: #999; position: absolute; position: absolute; left: 10px; }
-	body.Fakture table#data.dataTable tbody td:nth-child(1):before { content:'Datum'; }
-	body.Fakture table#data.dataTable tbody td:nth-child(2):before { content:'Faktura'; }
-	body.Fakture table#data.dataTable tbody td:nth-child(3):before { content:'Klijent'; }
-	body.Fakture table#data.dataTable tbody td:nth-child(4):before { content:'Opis'; }
-	body.Fakture table#data.dataTable tbody td:nth-child(5):before { content:'Iznos'; }
-	body.Fakture table#data.dataTable tbody td:nth-child(6):before { content:'Status'; }
-	body.Kompanija table#data.dataTable tbody td:nth-child(1):before { content:'Kompanija'; }
-	body.Kompanija table#data.dataTable tbody td:nth-child(2):before { content:'Adresa'; }
-	body.Kompanija table#data.dataTable tbody td:nth-child(3):before { content:'Mesto'; }
-	body.Kompanija table#data.dataTable tbody td:nth-child(4):before { content:'Kontakt'; }
-	body.Kompanija table#data.dataTable tbody td { padding-left: 80px; position: relative; }
-	body.Korisnici table#data.dataTable tbody td:nth-child(1):before { content:'Ime i prezime'; }
-	body.Korisnici table#data.dataTable tbody td:nth-child(2):before { content:'Mejl'; }
-	body.Korisnici table#data.dataTable thead tr { width: 100%; }
-	body.Korisnici table#data.dataTable thead th { border-bottom: 0 !important; }
-	body.Korisnici table#data.dataTable tbody td { padding-left: 100px; }
+	
+	table.twlist tbody td:nth-child(1):before { content:'Broj p. n.'; }
+	table.twlist tbody td:nth-child(2):before { content:'Kompanija'; }
+	table.twlist tbody td:nth-child(3):before { content:'Zaposleni'; }
+	table.twlist tbody td:nth-child(4):before { content:'Vozilo'; }
+	table.twlist tbody td:nth-child(5):before { content:'Status'; }
+
+	table.twtable thead tr { display: table !important; width: 100%; }
+	table.twtable tbody td:nth-child(1):before { content:'Tip troška'; }
+	table.twtable tbody td:nth-child(2):before { content:'Datum'; }
+	table.twtable tbody td:nth-child(3):before { content:'Opis'; }
+	table.twtable tbody td:nth-child(4):before { content:'Iznos'; }
+
+	table.complist thead tr { display: table !important; width: 100%; }
+	table.complist tbody td:nth-child(1):before { content:'Kompanija'; }
+	table.complist tbody td:nth-child(2):before { content:'Adresa'; }
+	table.complist tbody td:nth-child(3):before { content:'Mesto'; }
+	table.complist tbody td:nth-child(4):before { content:'Država'; }
+	table.complist tbody td:nth-child(5):before { content:'Kontakti'; }
+
+	table.vehiclelist tbody td { padding-left: 95px !important; }
+	table.vehiclelist tbody td:nth-child(1):before { content:'Tip vozila'; }
+	table.vehiclelist tbody td:nth-child(2):before { content:'Marka vozila'; }
+	table.vehiclelist tbody td:nth-child(3):before { content:'Registracija'; }
+	table.vehiclelist tbody td:nth-child(4):before { content:'Kompanija'; }
+
+	table.userlist tbody td { padding-left: 100px !important; }
+	table.userlist tbody td:nth-child(1):before { content:'Ime i prezime'; }
+	table.userlist tbody td:nth-child(2):before { content:'Kompanija'; }
+	table.userlist tbody td:nth-child(3):before { content:'Autorizacija'; }
+	table.userlist tbody td:nth-child(4):before { content:'E-mail';
+
 	table#data.dataTable tbody td { text-align: left !important; }
 	.content-section { padding-top: 50px; background-color: #f5f5f5; }
 	.content-section li { background-color: #f5f5f5; }
@@ -193,4 +220,21 @@ form > div.form-group { text-align: center; }
 	li#data_previous a:before { content: '<'; position: absolute !important; color: #777; left: 5px; top: 5px; font-size: 18px; }
 	li#data_next a:before { content: '>'; position: absolute !important; color: #777; right: 5px; top: 5px; font-size: 18px; }
 	body:not(.login) form .form-group a, body:not(.Login) form .form-group input:not([type=checkbox]) { width: 100%; }
+	.full-on-mob { display: contents; }
+	.full-on-mob.top15 label { padding-top: 15px; }
+	#accordionZero .card-body .row > div { display: flex !important; flex-direction: column; }
+	#accordionZero .card-body .row input[type="submit"] { margin-top: 30px !important; }
+	.just-column { flex-direction: column !important; }
+	body.travel-warrant label:not(button label) { padding-top: 15px; }
+	input.form-control.form-control-sm { width: auto !important; }
+	body.register-tw .form-check.form-switch { padding-top: 15px; }
+	select#daily_wage_currency, select#advance_payment_currency { width: auto; }
+	.dva-jedan .flex-prvi { flex: 2; }
+	.dva-jedan .flex-drugi { flex: 1; }
+	.top0 label { padding-top: 0 !important; }
+	body.about li { padding: 10px !important; }
+	/*.alert-danger:before { content: ''; }*/
+	body.login .alert-danger { padding: 5px 20px 3px 60px !important; }
+	body.login .alert-danger:before { top: -14px; font-size: 56px; }
+	.top15mob { padding-top: 15px; }
 }
