--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -38,7 +38,7 @@
           {{ form.abroad(class="form-check-input", onclick="myFunction()", id="abroad_id") }} 
           {{ form.abroad.label(class="form-check-label") }}
         </div>
-        <div class="col form-box">
+        <div class="form-box top15">
           {{ form.relation.label(class="form-control-label") }} 
           {% if form.relation.errors %} 
           {{ form.relation(class="form-control form-control-lg is-invalid") }}
@@ -51,7 +51,7 @@
           {{ form.relation(class="form-control form-control-lg") }}
           {% endif %}
         </div>
-        <div class="row">
+        <div class="row top15 dva-jedan">
           <div 
           id="collapseZero" 
           class="collapse" 
@@ -97,7 +97,7 @@
             </div>
           </div>
 
-          <div class="col form-box">
+          <div class="col form-box flex-prvi">
             {{ form.daily_wage.label(class="form-control-label") }}
 
               {% if form.daily_wage.errors %}
@@ -111,7 +111,7 @@
                   {{ form.daily_wage(class="form-control form-control-lg", id="daily_wage") }}
               {% endif %}
           </div>
-          <div class="col form-box col-md-2">
+          <div class="col form-box col-md-2 minw120 flex-drugi">
             {{ form.daily_wage_currency.label(class="form-control-label") }}
               {% if form.daily_wage_currency.errors %}
                   {{ form.daily_wage_currency(class="form-control form-control-lg is-invalid") }}
@@ -126,8 +126,8 @@
           </div>
         </div>
         <br>
-        <div class="row">
-          <div class="col form-box">
+        <div class="row dva-jedan">
+          <div class="col form-box flex-prvi">
             {{ form.advance_payment.label(class="form-control-label") }}
               {% if form.advance_payment.errors %}
                   {{ form.advance_payment(class="form-control form-control-lg is-invalid") }}
@@ -142,7 +142,7 @@
           </div>
 
 
-          <div class="col form-box col-md-2">
+          <div class="col form-box col-md-2 minw120 flex-drugi">
             {{ form.advance_payment_currency.label(class="form-control-label") }}
               {% if form.advance_payment_currency.errors %}
                   {{ form.advance_payment_currency(class="form-control form-control-lg is-invalid") }}
@@ -185,7 +185,7 @@
               </h5>
             </div>
 
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="card-body">
                 <div class="form-box">
                     {% if form.vehicle_id.errors %}
@@ -235,7 +235,7 @@
                 </button>
               </h5>
             </div>
-            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+            <div id="collapseThree" class="collapse inertop15" aria-labelledby="headingThree" data-parent="#accordion">
               <div class="card-body">
                 <div class="form-box">
                   {{ form.personal_type.label(class="form-control-label") }}
@@ -276,7 +276,7 @@
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.personal_registration(class="form-control form-control-lg", placeholder="Uneti registraciju ličnog vozila") }}
+                        {{ form.personal_registration(class="form-control form-control-lg", placeholder="Uneti registracionu oznaku") }}
                     {% endif %}
                 </div>
               </div>
@@ -325,7 +325,7 @@
                 {{ form.costs_pays(class="form-control form-control-lg") }}
             {% endif %}
         </div>
-        <div class="form-box">
+        <div class="form-box top15">
           {{ form.principal_id.label(class="form-control-label") }}
             {% if form.principal_id.errors %}
                 {{ form.principal_id(class="form-control form-control-lg is-invalid") }}
@@ -338,7 +338,7 @@
                 {{ form.principal_id(class="form-select form-select-lg") }}
             {% endif %}
         </div>
-        <div class="form-box">
+        <div class="form-box top15">
           {{ form.cashier_id.label(class="form-control-label") }}
             {% if form.cashier_id.errors %}
                 {{ form.cashier_id(class="form-control form-control-lg is-invalid") }}
@@ -352,7 +352,7 @@
             {% endif %}
         </div>
       </fieldset>
-      <div class="form-group">
+      <div class="form-group top50">
         <a class="btn btn-info" href="{{url_for('travel_warrants.travel_warrant_list')}}">Nazad</a>
         {{ form.submit(class="btn btn-outline-info", onclick="prekoNeoporezivog()") }}
       </div>
