--- a/putninalozi/templates/register_u.html
+++ b/putninalozi/templates/register_u.html
@@ -4,38 +4,63 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <div class="row">
-                  <div class="col form-group">
-                      {{ form.email.label(class="form-control-label") }}
-                      {% if form.email.errors %}
-                          {{ form.email(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.email.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.email(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
-                  <div class="col form-group">
-                      {{ form.gender.label(class="form-control-label") }}
-
-                      {% if form.gender.errors %}
-                          {{ form.gender(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.gender.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.gender(class="form-select form-select-lg") }}
-                      {% endif %}
-                  </div>
+                <div class="row just-column">
+                    <div class="col form-group">
+                        {{ form.name.label(class="form-control-label") }}
+                        {% if form.name.errors %}
+                            {{ form.name(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.name.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.name(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="col form-group">
+                        {{ form.surname.label(class="form-control-label") }}
+                        {% if form.surname.errors %}
+                            {{ form.surname(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.surname.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.surname(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
                 </div>
 
-                <div class="row">
-                  <div class="col form-group">
+                <div class="row just-column">
+                    <div class="col form-group">
+                        {{ form.gender.label(class="form-control-label") }}
+                        {% if form.gender.errors %}
+                            {{ form.gender(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.gender.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.gender(class="form-select form-select-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="col form-group">
+                        {{ form.email.label(class="form-control-label") }}
+                        {% if form.email.errors %}
+                            {{ form.email(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.email.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.email(class="form-control form-control-lg") }}
+                        {% endif %}
+                    </div>
+                    <div class="col form-group">
                       {{ form.password.label(class="form-control-label") }}
                       {% if form.password.errors %}
                           {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -63,20 +88,7 @@
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="col form-group">
-                      {{ form.name.label(class="form-control-label") }}
-                      {% if form.name.errors %}
-                          {{ form.name(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.name.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.name(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
+                <div class="row just-column">
                   <div class="col form-group">
                       {{ form.authorization.label(class="form-control-label") }}
                       {% if form.authorization.errors %}
@@ -92,20 +104,8 @@
                   </div>
                 </div>
 
-                <div class="row">
-                  <div class="col form-group">
-                      {{ form.surname.label(class="form-control-label") }}
-                      {% if form.surname.errors %}
-                          {{ form.surname(class="form-control form-control-lg is-invalid") }}
-                          <div class="invalid-feedback">
-                              {% for error in form.surname.errors %}
-                                  <span>{{ error }}</span>
-                              {% endfor %}
-                          </div>
-                      {% else %}
-                          {{ form.surname(class="form-control form-control-lg") }}
-                      {% endif %}
-                  </div>
+                <div class="row just-column">
+                  
                   <div class="col form-group">
                       {{ form.default_vehicle.label(class="form-control-label") }}
                       {% if form.default_vehicle.errors %}
@@ -120,13 +120,6 @@
                       {% endif %}
                   </div>
                 </div>
-
-
-
-
-
-
-
 
 
                 {% if current_user.authorization == 's_admin'%}
