--- a/putninalozi/templates/user_list.html
+++ b/putninalozi/templates/user_list.html
@@ -5,7 +5,7 @@
   <hr>
 {% endif %}
 
-<table id="data" border="1" class="table table-striped">
+<table id="data" border="1" class="table table-striped userlist">
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr id="header">
