--- a/putninalozi/static/mikicustom.css
+++ b/putninalozi/static/mikicustom.css
@@ -72,7 +72,7 @@ body:not(.login) h1 { display: block; font-size: 24px; font-weight: 700; color: 
 .accordion-item { border-radius: 5px !important; border: 0; background: #f5f5f5; margin-bottom: 15px; }
 .accordion-button { background-image: linear-gradient(#009dde, #104e97); color: #333 !important; text-transform: uppercase; font-weight: 700; font-size: 12px; 
 	padding: 10px 20px; border-radius: 5px !important; color: #fff !important; }
-.accordion-button:hover { color: #fff; background-image: linear-gradient(#104e97, #009dde); !important; border-color: transparent; }
+.accordion-button:hover { color: #fff; background-image: linear-gradient(#104e97, #009dde) !important; border-color: transparent; }
 .accordion-button:focus { border-color: transparent; outline: 0; box-shadow: none; }
 .accordion-button:not(.collapsed)::after { background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000000'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e"); }
 .accordion-button::after { transform: rotate(0deg); filter: invert(1); }
@@ -157,12 +157,12 @@ form > div.form-group { text-align: center; }
 	table.dataTable > thead .sorting_desc:after, table.dataTable > thead .sorting_asc_disabled:before, table.dataTable > thead .sorting_asc_disabled:after, table.dataTable > thead .sorting_desc_disabled:before, 
 	table.dataTable > thead .sorting_desc_disabled:after { position: unset; }
 	body:not(.Users) table#data.dataTable tbody td { padding-left: 85px; position: relative; }
-	table#data.dataTable tbody td:before { font-size:12px; color: #999; position: absolute; position: absolute; left: 10px; }
+	table#data.dataTable tbody td:before { font-size:12px; color: #999; position: absolute; position: absolute; left: 10px; top: 8px; }
 	
 	table.twlist tbody td:nth-child(1):before { content:'Broj p. n.'; }
-	table.twlist tbody td:nth-child(2):before { content:'Kompanija'; }
-	table.twlist tbody td:nth-child(3):before { content:'Zaposleni'; }
-	table.twlist tbody td:nth-child(4):before { content:'Vozilo'; }
+	table.twlist tbody td:nth-child(2):before { content:'Zaposleni'; }
+	table.twlist tbody td:nth-child(3):before { content:'Vozilo'; }
+	table.twlist tbody td:nth-child(4):before { content:'Datum'; }
 	table.twlist tbody td:nth-child(5):before { content:'Status'; }
 
 	table.twtable thead tr { display: table !important; width: 100%; }
@@ -188,7 +188,7 @@ form > div.form-group { text-align: center; }
 	table.userlist tbody td:nth-child(1):before { content:'Ime i prezime'; }
 	table.userlist tbody td:nth-child(2):before { content:'Kompanija'; }
 	table.userlist tbody td:nth-child(3):before { content:'Autorizacija'; }
-	table.userlist tbody td:nth-child(4):before { content:'E-mail';
+	table.userlist tbody td:nth-child(4):before { content:'E-mail';}
 
 	table#data.dataTable tbody td { text-align: left !important; }
 	.content-section { padding-top: 50px; background-color: #f5f5f5; }
@@ -237,4 +237,5 @@ form > div.form-group { text-align: center; }
 	body.login .alert-danger { padding: 5px 20px 3px 60px !important; }
 	body.login .alert-danger:before { top: -14px; font-size: 56px; }
 	.top15mob { padding-top: 15px; }
+	body.login .container form > div.form-group { align-items: start; }
 }
