--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -18,9 +18,9 @@
     <script src="https://kit.fontawesome.com/eaa4d75133.js" crossorigin="anonymous"></script>
 
     {% if title %}
-      <title>Putni Nalozi - {{ title }}</title>
+      <title>Putni nalozi - {{ title }}</title>
     {% else %}
-      <title>Putni Nalozi</title>
+      <title>Putni nalozi</title>
     {% endif %}
   </head>
   <body>
