--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -68,10 +68,10 @@
     <thead>
       <tr id="header">
         <th>Br. putnog naloga</th>
-        <th>Zaposleni</th>
+        <th>Korisnik</th>
         <th>Vozilo</th>
         <th>Kompanija</th>
-        <th>Status</th>
+        <th>Status naloga</th>
       </tr>
     </thead>
     <tbody>
@@ -123,10 +123,10 @@
     <thead>
       <tr id="header">
         <th>Br.</th>
-        <th>Zaposleni</th>
+        <th>Korisnik</th>
         <th>Vozilo</th>
         <th>Datum</th>
-        <th>Status</th>
+        <th>Status naloga</th>
       </tr>
     </thead>
     <tbody>
@@ -178,10 +178,10 @@
     <thead>
       <tr id="header">
         <th>Br.</th>
-        <th>Zaposleni</th>
+        <th>Korisnik</th>
         <th>Vozilo</th>
         <th>Datum</th>
-        <th>Status</th>
+        <th>Status naloga</th>
       </tr>
     </thead>
     <tbody>
