--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -8,9 +8,9 @@
   {% if current_user.authorization == 's_admin' %}
     <thead>
       <tr>
-        <th>Tip Vozila</th>
+        <th>Tip vozila</th>
         <th>Marka vozila</th>
-        <th>Registracija</th>
+        <th>Registraciona oznaka</th>
         <th>Kompanija</th>
       </tr>
     </thead>
