--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -488,9 +488,7 @@
             </td>
             <td class="align-middle">{{ trosak.expenses_date.date() }}</td>
             <td class="align-middle">{{ trosak.description }}</td>
-            <td class="align-middle">
-              {{ trosak.amount }} {{ trosak.amount_currency }}
-            </td>
+            <td class="align-middle">{{ '{:,.2f}'.format(trosak.amount) }} {{ trosak.amount_currency }}</td>
           </tr>
           {% endfor %}
         </tbody>
