--- a/putninalozi/static/mikicustom.css
+++ b/putninalozi/static/mikicustom.css
@@ -3,7 +3,7 @@ body.login h1 { font-size: 1.6rem; color: #999; font-weight: 700; padding: 30px 
 h2 { font-size: 1.4rem; }
 h3 { font-size: 1.2rem; }
 header { background-color: #104e97; padding-bottom: 40px; }
-.bg-steel { background-color: #104e97; }
+.bg-steel .dropdown-menu { background-color: #104e97; }
 .alert { display: inline-block; padding: 5px 20px 3px 40px !important; margin-top: 20px; }
 .alert-success { color: #009cdb; background-color: transparent;  border: 1px solid #009cdb; font-weight: 700; font-size: 16px; text-align: left; border-radius: 50px;}
 .alert-success:before { position: absolute; content: '\f058'; font-family: "Font Awesome 6 Free"; left: 0; top: -8px; font-size: 32px; }
@@ -60,7 +60,7 @@ body:not(.login) main.container { margin-top:-40px; background-color: #fff; box-
 body:not(.login) h1 { display: block; font-size: 24px; font-weight: 700; color: #999; text-shadow: 1px 1px 1px #fff; background-color: #eee; padding: 10px; margin: 0 -20px 20px -20px; }
 .navbar>.container, .navbar>.container-fluid, .navbar>.container-lg, .navbar>.container-md, .navbar>.container-sm, .navbar>.container-xl, .navbar>.container-xxl { justify-content: space-between; }
 .navbar-brand img { max-width: 160px; }
-.navbar-dark .navbar-nav .nav-link { border-bottom: 1px solid; margin-right: 3px; }
+.navbar-dark .navbar-nav .nav-link .dropdown-menu { border-bottom: 1px solid; margin-right: 3px; }
 .navbar-dark .navbar-nav .nav-link:hover { border-bottom: 3px solid; margin-bottom: -2px; }
 .user-avatar { margin-left: auto; color: #fff; font-weight: 500; position: relative; }
 .user-avatar:before { content: '\f007'; position: asolute; left:0; top: 0; color: rgba(255,255,255,0.5); font-family: "Font Awesome 6 Free"; border: 5px solid rgba(255,255,255,0.2); border-radius: 50px; padding: 5px 7px; margin-right: 5px; }
