--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -38,12 +38,20 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
                 <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Početna</a>
-                <a class="nav-item nav-link" href="{{ url_for('main.about') }}">O softveru</a>
                 <a class="nav-item nav-link" href="{{ url_for('travel_warrants.travel_warrant_list') }}">Putni nalozi</a>
                 {% if current_user.authorization in ['s_admin', 'c_admin', 'c_principal', 'c_founder'] %}
-                <a class="nav-item nav-link" href="{{ url_for('companys.company_list') }}">Kompanija</a>
-                <a class="nav-item nav-link" href="{{ url_for('vehicles.vehicle_list') }}">Vozila</a>
-                <a class="nav-item nav-link" href="{{ url_for('users.user_list') }}">Korisnici</a>
+                <li class="nav-item dropdown dropdown--align-right">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Podešavanja
+                  </a>
+                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{{ url_for('main.settings', company_id=current_user.user_company.id) }}">Osnovna podešavanja</a>
+                    <a class="dropdown-item" href="{{ url_for('companys.company_list') }}">Kompanija</a>
+                    <a class="dropdown-item" href="{{ url_for('vehicles.vehicle_list') }}">Vozila</a>
+                    <a class="dropdown-item" href="{{ url_for('users.user_list') }}">Korisnici</a>
+                  </div>
+                </li>
+                  
                 <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
                 {% else %}
                 <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Odjavite se</a>
