--- a/putninalozi/templates/vehicle.html
+++ b/putninalozi/templates/vehicle.html
@@ -4,66 +4,75 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <div class="form-group">
-                {{ form.vehicle_type.label(class="form-control-label") }}
-
-                {% if form.vehicle_type.errors %}
-                    {{ form.vehicle_type(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.vehicle_type.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.vehicle_type(class="form-select form-select-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.vehicle_brand.label(class="form-control-label") }}
-
-                {% if form.vehicle_brand.errors %}
-                    {{ form.vehicle_brand(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.vehicle_brand.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.vehicle_brand(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                {{ form.vehicle_registration.label(class="form-control-label") }}
-
-                {% if form.vehicle_registration.errors %}
-                    {{ form.vehicle_registration(class="form-control form-control-lg is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.vehicle_registration.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.vehicle_registration(class="form-control form-control-lg") }}
-                {% endif %}
-            </div>
-            {% if current_user.authorization == 's_admin'%}
-              <div class="form-group">
-                  {{ form.company_id.label(class="form-control-label") }}
-
-                  {% if form.company_id.errors %}
-                      {{ form.company_id(class="form-control form-control-lg is-invalid") }}
-                      <div class="invalid-feedback">
-                          {% for error in form.company_id.errors %}
-                              <span>{{ error }}</span>
-                          {% endfor %}
-                      </div>
-                  {% else %}
-                      {{ form.company_id(class="form-select form-select-lg") }}
-                  {% endif %}
+          <div class="form-group">
+            {{ form.vehicle_ownership.label(class="form-control-label") }}
+            {% if form.vehicle_ownership.errors %}
+              {{ form.vehicle_ownership(class="form-control form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.vehicle_ownership.errors %}
+                  <span>{{ error }}</span>
+                {% endfor %}
               </div>
             {% else %}
-              {{ form.company_id(class="sr-only form-select form-select-lg") }}
+              {{ form.vehicle_ownership(class="form-select form-select-lg") }}
             {% endif %}
+          </div>
+          <div class="form-group">
+              {{ form.vehicle_type.label(class="form-control-label") }}
+              {% if form.vehicle_type.errors %}
+                  {{ form.vehicle_type(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.vehicle_type.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.vehicle_type(class="form-select form-select-lg") }}
+              {% endif %}
+          </div>
+          <div class="form-group">
+              {{ form.vehicle_brand.label(class="form-control-label") }}
+              {% if form.vehicle_brand.errors %}
+                  {{ form.vehicle_brand(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.vehicle_brand.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.vehicle_brand(class="form-control form-control-lg") }}
+              {% endif %}
+          </div>
+          <div class="form-group">
+              {{ form.vehicle_registration.label(class="form-control-label") }}
+              {% if form.vehicle_registration.errors %}
+                  {{ form.vehicle_registration(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.vehicle_registration.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.vehicle_registration(class="form-control form-control-lg") }}
+              {% endif %}
+          </div>
+          {% if current_user.authorization == 's_admin'%}
+            <div class="form-group">
+                {{ form.company_id.label(class="form-control-label") }}
+                {% if form.company_id.errors %}
+                    {{ form.company_id(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.company_id.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.company_id(class="form-select form-select-lg") }}
+                {% endif %}
+            </div>
+          {% else %}
+            {{ form.company_id(class="sr-only form-select form-select-lg") }}
+          {% endif %}
 
 
         </fieldset>
